# zydeco

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  CONTRIBUTE.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  clippy.toml  flake.nix  run.sh
cli/: Cargo.toml  build.rs
cli/completions/: _zydeco  _zydeco.ps1  zydeco.bash  zydeco.elv  zydeco.fish
cli/src/: cli.rs  commands.rs  lib.rs  main.rs  repl.rs
cli/tests/: run_examples.rs
cli/tests/command/: env.in  type.in
cli/tests/pure/: bindings.zy  booleans.zy  comments.zy  fn'.zy  thunk.zy
compiler/: Cargo.toml
compiler/cases/: acc.vit  acc.zydeco  explosion.vit  interpreter.zydeco  shadow.vit  thunk.vit
compiler/src/: lib.rs  main.rs  parser.lalrpop  syntax.rs
compiler/src/cli/: commands.rs  mod.rs  zydeco.rs
compiler/src/dynamics/: ann.rs  builtins.rs  env.rs  eval.rs  fmt.rs  mod.rs  syntax.rs
compiler/src/parse/: ann.rs  fmt.rs  mod.rs  parser.lalrpop  syntax.rs
compiler/src/statics/: builtins.rs  ctx.rs  mod.rs  resolve.rs  tyck.rs
compiler/src/syntax/: fmt.rs
compiler/src/utils/: ann.rs  fmt.rs  mod.rs
editor/cajun/: Cargo.toml
editor/cajun/src/: lib.rs  main.rs  token.rs
editor/zls/: Cargo.toml
editor/zls/src/: document_symbols.rs  documents.rs  main.rs  text_position.rs
lang/: Cargo.toml  build.rs
lang/amd64/: Cargo.toml
lang/amd64/src/: emit.rs  lib.rs  syntax.rs
lang/assembly/: Cargo.toml
lang/assembly/src/: arena.rs  fmt.rs  interp.rs  lib.rs  lower.rs  lower_legacy.rs  norm.rs  syntax.rs
lang/cfg/: Cargo.toml
lang/cfg/src/: lib.rs  syntax.rs
lang/derive/src/: lib.rs
lang/driver/: Cargo.toml
lang/driver/src/: conf.rs  diagnostics.rs  err.rs  lib.rs  main.rs  package.rs  tests.rs  zydeco.rs
lang/dynamics/: Cargo.toml
lang/dynamics/src/: README.md  builtin.rs  cps.rs  eval.rs  fmt.rs  impls.rs  lib.rs  link.rs  sps.rs  syntax.rs
lang/lib/: spell
lang/lib/avl/: proj.toml
lang/lib/delimcc/: lib.zy  proj.toml  reset-shift-k.zy  reset-shift-r.zy  reset-shift.zy  try-catch.zy
lang/lib/exec/: Y.zydeco  abort.zy  add.zy  alg.toml  alg.zy  algtrans.toml  algtrans.zy  alias.zy  backtrack.zydeco  cbpv-monadic-trans.zy  cbpv-monadic.zy  cbpv.zy  cbv.zy  choice.zy  defunctionalization.zydeco  deterministic-pushdown-automaton.zydeco  even-odd-codata.zy  even-odd-data.zy  explosion.zy  forall.zy  free'.zy  free.zy  interpreter.zydeco  iota.zy  listm.zydeco  loop.zydeco  loopy.zy  malt.zy  motrans.zy  oo.zydeco  partial-annotation.zy  proj.toml  regex.zy  ret.zydeco  trans.zy  variadic.zy  varidic.zy
lang/lib/icfp/: abort.zydeco  algebra.zydeco  algtrans.zydeco  echo_sum.zydeco  exn.zydeco  free.zydeco  monads.zydeco  proj.toml  transformers.zydeco
lang/lib/monadic/: exn.zy  exnkt.zy  exnt.zy  proj.toml  quote.zy  sam.zy  trans.zy
lang/lib/oopsla/: algebra.zydeco  core.zydeco  data.zydeco  exnkt.zydeco  exnt.zy  free.zydeco  monads.zydeco  overview.md  polynomial.zydeco  proj.toml  sum_and_mult.zydeco  transformers.zydeco
lang/lib/stack/: backtrace.zydeco  cbv.zydeco  invert.zydeco  proj.toml
lang/lib/std/: avl.zy  core.toml  core.zy  data.toml  data.zy  lib.zy  proj.toml  stub.toml  stub.zy
lang/sps/src/: fmt.rs  lib.rs  linker.rs  lower.rs  syntax.rs
lang/src/: lib.rs
lang/src/backend/: cps.rs
lang/src/dynamics/: eval.rs  fmt.rs  syntax.rs
lang/src/statics/: fmt.rs  lift.rs
lang/src/syntax/: binder.rs  span.rs  term.rs
lang/src/utils/: fmt.rs
lang/stack/: Cargo.toml
lang/stack/src/: arena.rs  clocon.rs  conversion.rs  fmt.rs  free.rs  lib.rs  lower.rs  subst.rs  substitution.rs  syntax.rs
lang/stackir/: Cargo.toml
lang/stackir/src/: README.md  arena.rs  builtin.rs  convert.rs  fmt.rs  free.rs  lib.rs  lower.rs  substitution.rs  syntax.rs
lang/statics/: Cargo.toml
lang/statics/src/: alloc.rs  arena.rs  construct.rs  destruct.rs  dump.rs  env.rs  err.rs  fmt.rs  inlinable.rs  lib.rs  lift.rs  log.rs  logg.rs  lub.rs  monadic.rs  moncons.rs  norm.rs  prims.rs  span.rs  syntactic.rs  syntax.rs  tyck.rs  utils.rs  wellformed.rs
lang/surface/: Cargo.toml  build.rs
lang/surface/src/: lib.rs  syntax.rs
lang/syntax/: Cargo.toml
lang/syntax/src/: fmt.rs  impls.rs  lib.rs  span.rs
lang/tests/: Cargo.toml  avl.rs  delimcc.rs  examples.rs  exec.rs  monadic.rs
lang/tests/check-only/: alias.zy  explosion.zy  hot.zy  iota.zy  loop.zydeco  optiont.zy
lang/tests/icfp/: algtrans.zydeco  echo_sum.zydeco  free.zydeco  monads.zydeco
lang/tests/io/: echo_once.zydeco
lang/tests/nonzero-exit-code/: exists.zy  malt.zy  motrans.zy  regex.zy  trans.zy  unit.zy  varidic.zy
lang/tests/src/: lib.rs
lang/tests/tests/: avl.rs  compile.rs  delimcc.rs  examples.rs  exec.rs  monadic.rs  oopsla.rs  spell.rs  stack.rs
lang/utils/: Cargo.toml
lang/utils/src/: arena.rs  cells.rs  context.rs  deps.rs  err.rs  graph.rs  imc.rs  interval_tree.rs  lib.rs  monoid.rs  pass.rs  phantom.rs  scc.rs  span.rs  with.rs
lang/x86/: Cargo.toml
lang/x86/src/: emit.rs  lib.rs  syntax.rs
runtime/: Cargo.toml  build.rs  stub.rs
zydeco-lang/: Cargo.toml
zydeco-lang/derive/: Cargo.toml
zydeco-lang/derive/src/: lib.rs
zydeco-lang/driver/: Cargo.toml
zydeco-lang/driver/src/: err.rs  lib.rs  main.rs  package.rs  parsed.rs  resolved.rs  tests.rs
zydeco-lang/dynamics/: Cargo.toml
zydeco-lang/dynamics/src/: builtin.rs  eval.rs  fmt.rs  impls.rs  lib.rs  link.rs  syntax.rs
zydeco-lang/lib/exec/: Y.zydeco  abort.zy  add.zy  algtrans.zy  cbpv-do.zy  cbpv-monadic.zy  cbpv.zy  cbv.zy  choice.zy  defunctionalization.zydeco  deterministic-pushdown-automaton.zydeco  exists.zy  explosion.zy  forall.zy  hash.zy  ifz.zy  num.zy  (+14 more)
zydeco-lang/src/: dynamics.rs  lex.rs  lib.rs  library.rs  main.rs  parse.rs  statics.rs  syntax.rs  utils.rs  zydeco.rs
zydeco-lang/statics/: Cargo.toml
zydeco-lang/surface/: Cargo.toml
zydeco-lang/syntax/: Cargo.toml
zydeco-lang/tests/: basics.zydeco  booleans.zy  booleans.zydeco  even-odd.zydeco  explosion.zy  explosion.zydeco  nat.zydeco  run_examples.rs
zydeco-lang/utils/: Cargo.toml
(+597 files in other folders)
