[workspace]
resolver = "2"
members = [
    "lang/utils",
    "lang/derive",
    "lang/syntax",
    "lang/surface",
    "lang/statics",
    "lang/dynamics",
    "lang/driver",
    "cli",
    "web",
    "editor/zls",
    "editor/cajun",
]

[workspace.package]
version = "0.2.0"
rust-version = "1.86"
authors = ["The Zydeco Project Developers"]
edition = "2024"
# homepage = "https://zydeco-lang.github.io"
repository = "https://github.com/zydeco-lang/zydeco"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
# zydeco
zydeco-utils = { path = "lang/utils" }
zydeco-derive = { path = "lang/derive" }
zydeco-syntax = { path = "lang/syntax" }
zydeco-surface = { path = "lang/surface" }
zydeco-statics = { path = "lang/statics" }
zydeco-dynamics = { path = "lang/dynamics" }
zydeco-driver = { path = "lang/driver" }
# meta
syn = "2.0"
quote = "1.0"
# derive
derive_more = { version = "2.0", features = ["from", "add_assign"] }
derive-where = "1.4"
auto_impl = "1.3"
# utils
once_cell = "1.21"
sculptor = { version = "0.0.8", features = ["project_info", "file_io", "sha_snap"] }
rand = "0.9"
colored = "3.0"
# data structures
sequence_trie = "0.3"
im = "15"
indexmap = "2.9"
phf = "0.11"
# serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# parallelism
rayon = "1.10"
# logging
log = "0.4"
env_logger = "0.11"
# error handling
thiserror = "2"
unindent = "0.2"
# parsing
regex = "1"
logos = "0.15"
lalrpop = "0.22"
lalrpop-util = "0.22"
# cli
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# async
tokio = { version = "1.45", features = ["full"] }
# lsp
tower-lsp = { version = "0.20", features = ["proposed"]}
