[workspace]
resolver = "2"
members = [
    "lang/utils",
    "lang/derive",
    "lang/syntax",
    "lang/surface",
    "lang/statics",
    "lang/dynamics",
    "lang/stack",
    "lang/assembly",
    "lang/x86",
    "lang/driver",
    "lang/tests",
    "cli",
    "web",
    "editor/zls",
    "editor/cajun",
]

[workspace.package]
version = "0.2.2"
rust-version = "1.86"
authors = ["The Zydeco Project Developers"]
edition = "2024"
# homepage = "https://zydeco-lang.github.io"
repository = "https://github.com/zydeco-lang/zydeco"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
# zydeco
zydeco-utils = { path = "lang/utils" }
zydeco-derive = { path = "lang/derive" }
zydeco-syntax = { path = "lang/syntax" }
zydeco-surface = { path = "lang/surface" }
zydeco-statics = { path = "lang/statics" }
zydeco-dynamics = { path = "lang/dynamics" }
zydeco-x86 = { path = "lang/x86" }
zydeco-assembly = { path = "lang/assembly" }
zydeco-stack = { path = "lang/stack" }
zydeco-driver = { path = "lang/driver" }
# meta
syn = "2.0"
quote = "1.0"
# derive
derive_more = { version = "2.0", features = [
    "from",
    "into",
    "deref",
    "deref_mut",
    "add",
    "add_assign",
] }
impl-tools = "0.11"
auto_impl = "1.3"
# utils
once_cell = "1.21"
sculptor = { version = "0.0.9", features = [
    "project_info",
    "file_io",
    "sha_snap",
] }
rand = "0.9"
colored = "3.0"
pretty_assertions = "1.4"
# data structures
sequence_trie = "0.3"
im = "15.1"
indexmap = "2.10"
phf = "0.13"
rustc-hash = "2.1"
# serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
# parallelism
rayon = "1.10"
# logging
log = "0.4"
env_logger = "0.11"
# error handling
thiserror = "2"
unindent = "0.2"
# parsing
regex = "1"
logos = "0.15"
lalrpop = "0.22"
lalrpop-util = "0.22"
# pretty printing
pretty = { version = "0.12", features = ["termcolor"] }
# cli
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
# async
tokio = { version = "1.46", features = ["full"] }
# lsp
tower-lsp = { version = "0.20", features = ["proposed"] }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
# codegen-units = 1
