[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
zydeco-lang = { path = "../zydeco-lang" }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[[bin]]
name = "zydeco"
path = "src/main.rs"

# [lib]
# doctest = false
