[package]
name = "zydeco-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
zydeco-lang = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }

[[bin]]
name = "zydeco"
path = "src/main.rs"

# [lib]
# doctest = false
