[package]
name = "zydeco-cli"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "Command-line interface for the Zydeco programming language"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
zydeco-driver = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }

[[bin]]
name = "zydeco"
path = "src/main.rs"

# [lib]
# doctest = false
