[package]
name = "zydeco-lang"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "A language implementation for zydeco, a call-by-push-value language"

[dependencies]
regex = { workspace = true }
logos = { workspace = true }
lalrpop-util = { workspace = true }
im = { workspace = true }
thiserror = { workspace = true }
zydeco-utils = { workspace = true }
zydeco-derive = { workspace = true }
derive_more = { workspace = true }
rand = { workspace = true }

# build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = { workspace = true }

# [lib]
# doctest = false

# Maybe we should consider adding a profile for test
# [profile.test]
# opt-level = 3
# debug = 0
