[package]
name = "zydeco-runtime"
version = "0.0.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "main"
path = "stub.rs"

[features]
default = []
log_rt = ["dep:log", "dep:env_logger"]

[dependencies]
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

