[package]
name = "zydeco-lang"
version = "0.2.0"
edition = "2021"
description = "A language implementation for zydeco, a call-by-push-value language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
logos = "0.13"
lalrpop-util = "0.19"
once_cell = "1.17"
im = "15"
slotmap = "1.0"
thiserror = "1.0.40"
zydeco_derive = { path = "./derive" }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.19"

[lib]
doctest = false

# Maybe we should consider adding a profile for test
# [profile.test]
# opt-level = 3
# debug = 0
