[package]
name = "zydeco-lang"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "A language implementation for zydeco, a call-by-push-value language"

[dependencies]
regex = "1"
logos = "0.14"
lalrpop-util = "0.20"
im = "15"
slotmap = "1.0"
thiserror = "1.0.40"
zydeco-utils = { path = "./utils" }
zydeco-derive = { path = "./derive" }
derive_more = "0.99"
rand = "0.8"

# build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20"

# [lib]
# doctest = false

# Maybe we should consider adding a profile for test
# [profile.test]
# opt-level = 3
# debug = 0
