[package]
name = "zls"
version = "0.1.0"
edition = "2021"

[dependencies]
async-lsp = { version = "0.2.0", features = ["tokio"] }
lsp-textdocument = "0.4.0"
serde_json = "1.0.114"
tokio = { version = "1.43.1", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# zydeco-lang = { workspace = true }
zydeco-driver = { workspace = true }
zydeco-utils ={ workspace = true }
