[package]
name = "zydeco-assembly"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "zydeco compiled to assembly"

[dependencies]
zydeco-utils = { workspace = true }
zydeco-syntax = { workspace = true }
zydeco-statics = { workspace = true }
zydeco-stack = { workspace = true }
zydeco-surface = { workspace = true }
derive_more = { workspace = true }
im = { workspace = true }
pretty = { workspace = true }
rustc-hash = { workspace = true }
