[package]
name = "zydeco-driver"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "a minimal build system for zydeco"

[dependencies]
zydeco-utils = { workspace = true }
zydeco-derive = { workspace = true }
zydeco-syntax = { workspace = true }
zydeco-surface = { workspace = true }
zydeco-statics = { workspace = true }
zydeco-dynamics = { workspace = true }
zydeco-x86 = { workspace = true }
zydeco-assembly = { workspace = true }
derive_more = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
sculptor = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[lib]
doctest = false
