[package]
name = "zydeco-stackir"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "zydeco in stack-passing style"

[dependencies]
zydeco-utils = { workspace = true }
zydeco-syntax = { workspace = true }
zydeco-surface = { workspace = true }
zydeco-statics = { workspace = true }
zydeco-derive = { workspace = true }
derive_more = { workspace = true }
pretty = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_plain = { workspace = true }
indexmap = { workspace = true }
