[package]
name = "zydeco-statics"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "statics for zydeco"

[dependencies]
zydeco-utils = { workspace = true }
zydeco-derive = { workspace = true }
zydeco-syntax = { workspace = true }
zydeco-surface = { workspace = true }
derive_more = { workspace = true }
derive-where = { workspace = true }
auto_impl = { workspace = true }
im = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
log = { workspace = true }

[lib]
doctest = false
