[package]
name = "zydeco-surface"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "surface syntax for zydeco"

[dependencies]
regex = { workspace = true }
logos = { workspace = true }
lalrpop-util = { workspace = true }
sequence_trie = { workspace = true }
im = { workspace = true }
unindent = { workspace = true }
thiserror = { workspace = true }
auto_impl = { workspace = true }
zydeco-utils = { workspace = true }
zydeco-derive = { workspace = true }
zydeco-syntax = { workspace = true }
derive_more = { workspace = true, features = ["add_assign"] }

# build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = { workspace = true }

[lib]
doctest = false
