[package]
name = "zydeco-syntax"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "general syntax structures for zydeco"

[dependencies]
zydeco-derive = { workspace = true }
zydeco-utils = { workspace = true }
derive_more = { workspace = true }
derive-where = { workspace = true }
auto_impl = { workspace = true }

[lib]
doctest = false
