[package]
name = "zydeco-tests"
version = "0.2.0"
edition = "2024"

[dependencies]
zydeco-driver = { path = "../driver" }
zydeco-surface = { path = "../surface" }
zydeco-statics = { path = "../statics" }
zydeco-dynamics = { path = "../dynamics" }
zydeco-syntax = { path = "../syntax" }
zydeco-utils = { path = "../utils" }
