[package]
name = "zydeco-tests"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
zydeco-driver = { path = "../driver" }
zydeco-surface = { path = "../surface" }
zydeco-statics = { path = "../statics" }
zydeco-dynamics = { path = "../dynamics" }
zydeco-syntax = { path = "../syntax" }
zydeco-utils = { path = "../utils" }
