[package]
name = "zydeco-utils"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "utilities for zydeco"

[dependencies]
once_cell = { workspace = true }
im = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
