[package]
name = "zydeco-x86"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "x86 support for zydeco"

[dependencies]
zydeco-utils = { workspace = true }
zydeco-syntax = { workspace = true }
zydeco-surface = { workspace = true }
zydeco-statics = { workspace = true }
zydeco-stack = { workspace = true }
zydeco-assembly = { workspace = true }
derive_more = { workspace = true }
im = { workspace = true }
log = { workspace = true }
