[package]
name = "zydeco-derive"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "derive macros for zydeco"

[dependencies]
syn = "2.0"
quote = "1.0"

[lib]
doctest = false
proc-macro = true
