[package]
name = "zydeco-statics"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "statics for zydeco"

[dependencies]
# codespan-reporting = "0.11"
# slotmap = { version = "1", features = ["serde"] }
# im = "15"
# unindent = "0.2"
# thiserror = "1"
zydeco-utils = { workspace = true }
zydeco-derive = { workspace = true }
zydeco-surface = { workspace = true }
derive_more = { workspace = true }
derive-where = { workspace = true }

[lib]
doctest = false
