[package]
name = "zydeco-surface"
version = "0.2.0"
edition = "2021"
description = "surface syntax for zydeco"

[dependencies]
regex = "1"
logos = "0.14"
lalrpop-util = "0.20"
sculptor = "0.0.4"
slotmap = { version = "1", features = ["serde"] }
im = "15"
unindent = "0.2"
thiserror = "1"
zydeco-utils = { path = "../utils" }
zydeco-derive = { path = "../derive" }
zydeco-syntax = { path = "../syntax" }
derive_more = "0.99"
derive-where = "1.2"
anyhow = "*"

# build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20"

[lib]
doctest = false
