[package]
name = "zydeco-surface"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "surface syntax for zydeco"

[dependencies]
regex = "1"
logos = "0.14"
lalrpop-util = "0.20"
sculptor = "0.0.5"
sequence_trie = "0.3"
im = "15"
unindent = "0.2"
thiserror = "1"
zydeco-utils = { path = "../utils" }
zydeco-derive = { path = "../derive" }
zydeco-syntax = { path = "../syntax" }
derive_more = "0.99"
derive-where = "1.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20"

[lib]
doctest = false
