[package]
name = "zydeco-syntax"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "general syntax structures for zydeco"

[dependencies]
zydeco-utils = { path = "../utils" }
zydeco-derive = { path = "../derive" }
derive_more = "0.99"
derive-where = "1.2"

[lib]
doctest = false
